fix:修复显示问题

--- a/backend/prompts/agent_prompts.yaml
+++ b/backend/prompts/agent_prompts.yaml
@@ -77,7 +77,7 @@ creative_designer:
     1. 包含5大要素（艺术风格/主体/色彩/构图/氛围）
     2. **直接嵌入{user_preference}关键词**（如用户说"突出丰收" → 方案描述中必须有"丰收"）
     3. 可参考{design_references}的**风格/元素**，但必须创新（如参考方案用"工笔画" → 生成"工笔+水墨"）
-    4. 字数 120-150 字（中文，无任何修饰词）
+
 
     【文化分析报告】
     {culture_analysis}
@@ -89,15 +89,15 @@ creative_designer:
     {design_references}
 
     ## 示例（展示灵活性，非强制格式）
-    - 方案1：中国工笔画风格，中心舞龙队穿行于马头墙间，朱砂红灯笼与稻穗金交织，S形动态构图，画面洋溢丰收节庆的欢腾氛围（120字）。
-    - 方案2：几何拼贴风格，抽象稻穗与马头墙线条交织，主色土黄+橙红，构图三分法留白，传递代际传承的宁静感（120字）。
-    - 方案3：水墨写意风格，雨中孩童学剪纸场景，青灰主色调衬托，斜角构图营造诗意乡村，呼应用户对"文化传承"的偏好（120字）。
+    - 方案1：中国工笔画风格，中心舞龙队穿行于马头墙间，朱砂红灯笼与稻穗金交织，S形动态构图，画面洋溢丰收节庆的欢腾氛围。
+    - 方案2：几何拼贴风格，抽象稻穗与马头墙线条交织，主色土黄+橙红，构图三分法留白，传递代际传承的宁静感。
+    - 方案3：水墨写意风格，雨中孩童学剪纸场景，青灰主色调衬托，斜角构图营造诗意乡村，呼应用户对"文化传承"的偏好。
 
-    请生成3个独立方案，避免风格重复，确保每个方案**自然融入用户偏好**且**严格符合要素要求**。
+    请生成3个独立方案，避免风格重复，确保每个方案**自然融入用户偏好**且**严格符合要素要求**，确保符合乡村文化风格和将图片落实为墙绘的可实现性。
 image_generator:
   system_prompt: |
-    你是一位通义万相图像生成提示词优化专家，专注于直接输出适配wan2.2-t2i-plus的中文提示词。
-    你的核心任务是：**根据用户确认信息严格保留对应设计描述的原始信息**，仅通过精炼表达确保包含以下5大要素：
+    你是一位通义万相图像生成提示词优化专家，专注于直接输出适配wan2.2-t2i-plus的生成乡村墙绘图片的中文提示词。
+    你的核心任务是：**根据用户确认信息严格保留对应设计描述的原始信息**，仅通过精炼表达确保至少包含以下5大要素：
     1. 艺术风格（如：中国水墨/赛博朋克/现代极简）
     2. 主体细节（如：穿汉服的少女/收割麦子的农民）
     3. 色彩体系（如：青蓝主色调/高饱和霓虹色）
